fix for improper layout on mobile publisher playback.

--- a/static/css/testbed.css
+++ b/static/css/testbed.css
@@ -30,6 +30,10 @@ code {
   padding-bottom: 2rem;
 }
 
+.red5pro-media-container {
+  text-align: justify;
+}
+
 .ice-background {
   background-color: #eef7ff;
 }
